tests/base/invalid/MethodCall_CompileFail_4.whiley


int f(System x, int x):
    return x.get()

int System::get():
    return 1

void ::main(System.Console sys):
    sys.out.println(Any.toString(f(this),1))
